--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<html><head><base href="." />
-<meta charset="UTF-8">
-<title>Atelier Verana - Portfólio</title>
+<html>
+<head>
+    <base href="." />
+    <meta charset="UTF-8">
+    <title>Atelier Verana - Portfólio</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Link para o CSS externo -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Fonte do Google -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -42,11 +48,9 @@
 
 <section id="sobre" class="about-section">
     <h2>Sobre Mim</h2>
-    <p>Olá! a Vera Lúcia, uma artista especializada em esculturas e móveis em madeira, dedicada a fazer meus projetos.. Há mais de 15 anos, trabalho com diferentes tipos de madeira, explorando suas características naturais e texturas para criar peças que possam ser úteis para o dia a dia, como
-        mesas, bancos e cadeiras.</p>
+    <p>Olá! Sou Vera Lúcia, uma artista especializada em esculturas e móveis em madeira, dedicada a fazer meus projetos. Há mais de 15 anos, trabalho com diferentes tipos de madeira, explorando suas características naturais e texturas para criar peças que possam ser úteis para o dia a dia, como mesas, bancos e cadeiras.</p>
     
-    <p>Minha jornada começou em uma pequena oficina no interior de Montenegro, onde aprendi as técnicas tradicionais. Desde então, desenvolvi meu próprio estilo, mesclando técnicas contemporâneas com o respeito pela tradição artesanal brasileira, trabalhando em uma chácara
-        em Brochier RS.</p>
+    <p>Minha jornada começou em uma pequena oficina no interior de Montenegro, onde aprendi as técnicas tradicionais. Desde então, desenvolvi meu próprio estilo, mesclando técnicas contemporâneas com o respeito pela tradição artesanal brasileira, trabalhando em uma chácara em Brochier RS.</p>
 
     <div class="skills-section">
         <div class="skill-card">
@@ -56,6 +60,7 @@
                 <li>Entalhe Manual</li>
                 <li>Torneamento em Madeira</li>
             </ul>
+        </div>
     </div>
     <div class="contact-info" id="contato">
         <h3>Contato</h3>
@@ -67,56 +72,5 @@
         </div>
         <div class="contact-method">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="var(--dark-cedar)">
-                <path d="M20 15.5c-1.25 0-2.45-.2-3.57-.57-.35-.11-.74-.03-1.02.24l-2.2 2.2c-2.83-1.44-5.15-3.75-6.59-6.59l2.2-2.21c.28-.26.36-.65.25-1C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.5c0-.55-.45-1-1-1zM19 12h2c0-4.97-4.03-9-9-9v2c3.87 0 7 3.13 7 7z"/>
-            </svg>
-            <p>Telefone: (31) 99999-9999</p>
-        </div>
-        <div class="contact-method">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="var(--dark-cedar)">
-                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
-            </svg>
-            <p>Atelier: Chácara em Brochier RS</p>
-            <p>Horário de Funcionamento: Seg-Sex 9h às 18h | Sáb 9h às 13h</p>
-        </div>
-    </div>
-</section>
+                <path d="M20 15.5c-1.25 0-2.45-.2-3.57-.57-.35-.11-.74-.03-1.02.24l-2.2 2.2c-2.83-1.44-5.15-3.75-6.59-6.59l2.2-2.21c.28-.26.36-.65.25-1C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.5c0-.55-.45-
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    // Smooth scroll para links de navegação
-    document.querySelectorAll('nav a').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault();
-            const targetId = this.getAttribute('href');
-            document.querySelector(targetId).scrollIntoView({
-                behavior: 'smooth'
-            });
-        });
-    });
-
-    // Animação para os itens da galeria
-    const galleryItems = document.querySelectorAll('.gallery-item');
-    const observerOptions = {
-        threshold: 0.1
-    };
-
-    const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.style.opacity = '1';
-                entry.target.style.transform = 'translateY(0)';
-            }
-        });
-    }, observerOptions);
-
-    galleryItems.forEach(item => {
-        item.style.opacity = '0';
-        item.style.transform = 'translateY(20px)';
-        item.style.transition = 'all 0.6s ease-out';
-        observer.observe(item);
-    });
-});
-</script>
-
-</body>
-</html>
