--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <header class="header">
-    <div class="grain-overlay"></div>fs
+    <div class="grain-overlay"></div>
     <h1>Atelier Verana</h1>
     <p>Esculturas Artesanais</p>
 </header>
