--- a/index.html
+++ b/index.html
@@ -16,31 +16,13 @@
 </header>
 <nav>
     <ul>
-        <li><a href="#galeria">Galeria</a></li>
+        <li><a class="link-opacity-10" href="galeria.html">Galeria</a></li>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#contato">Contato</a></li>
     </ul>
 </nav>
 
-<section id="galeria" class="gallery">
-    <div class="gallery-item">
-        <svg viewBox="0 0 300 300" width="100%" height="300">
-            <path d="M150,50 Q200,100 150,150 T150,250" fill="none" stroke="var(--wood-brown)" stroke-width="15"/>
-            <path d="M100,50 Q150,100 100,150 T100,250" fill="none" stroke="var(--dark-cedar)" stroke-width="10"/>
-        </svg>
-    </div>
-    <div class="gallery-item">
-        <svg viewBox="0 0 300 300" width="100%" height="300">
-            <rect x="50" y="50" width="200" height="200" fill="var(--light-walnut)" rx="20"/>
-            <circle cx="150" cy="150" r="60" fill="var(--dark-cedar)"/>
-        </svg>
-    </div>
-    <div class="gallery-item">
-        <svg viewBox="0 0 300 300" width="100%" height="300">
-            <polygon points="150,50 250,150 150,250 50,150" fill="var(--sage)" stroke="var(--wood-brown)" stroke-width="8"/>
-        </svg>
-    </div>
-</section>
+
 
 <section id="sobre" class="about-section">
     <h2>Sobre Mim</h2>
@@ -85,16 +67,23 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    // Smooth scroll para links de navegação
     document.querySelectorAll('nav a').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
+    anchor.addEventListener('click', function (e) {
+        const targetId = this.getAttribute('href');
+
+        // Check if it's an internal link (starts with #)
+        if (targetId.startsWith('#')) {
             e.preventDefault();
-            const targetId = this.getAttribute('href');
-            document.querySelector(targetId).scrollIntoView({
-                behavior: 'smooth'
-            });
-        });
+            const targetElement = document.querySelector(targetId);
+            
+            if (targetElement) {
+                targetElement.scrollIntoView({
+                    behavior: 'smooth'
+                });
+            }
+        }
     });
+});
 
     // Animação para os itens da galeria
     const galleryItems = document.querySelectorAll('.gallery-item');
