--- a/galeria.html
+++ b/galeria.html
@@ -22,21 +22,110 @@
         </ul>
     </nav>
     <section id="galeria" class="gallery">
-        <div class="gallery-item">
-            <svg viewBox="0 0 300 300" width="100%" height="300">
-                <path d="M150,50 Q200,100 150,150 T150,250" fill="none" stroke="var(--wood-brown)" stroke-width="15"/>
-                <path d="M100,50 Q150,100 100,150 T100,250" fill="none" stroke="var(--dark-cedar)" stroke-width="10"/>
-            </svg>
-        </div>
-        <div class="gallery-item">
-            <svg viewBox="0 0 300 300" width="100%" height="300">
-                <rect x="50" y="50" width="200" height="200" fill="var(--light-walnut)" rx="20"/>
-                <circle cx="150" cy="150" r="60" fill="var(--dark-cedar)"/>
-            </svg>
-        </div>
-        <div class="gallery-item">
-            <svg viewBox="0 0 300 300" width="100%" height="300">
-                <polygon points="150,50 250,150 150,250 50,150" fill="var(--sage)" stroke="var(--wood-brown)" stroke-width="8"/>
-            </svg>
-        </div>
+            <div class="col">
+                    <div class="card shadow-sm">
+                            <img src="fotos/Snapinsta.app_42354849_2188043254776083_2056967763187210005_n_1080.jpg" class="card-img-top">
+                      
+                      <div class="card-body">
+                        <p class="card-text">Mesa de madeira e </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                          <div class="btn-group">
+                          </div>
+                          <small class="text-body-secondary">9 mins</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                        <div class="card shadow-sm">
+                                <img src="fotos/Snapinsta.app_449844746_1017471339901099_1641674724719939392_n_1080.jpg" class="card-img-top">
+                          <div class="card-body">
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                              <div class="btn-group">
+                              </div>
+                              <small class="text-body-secondary">9 mins</small>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                            <div class="card shadow-sm">
+                                <img src="fotos/Snapinsta.app_449854863_481969897714631_2861501438184957249_n_1080.jpg" class="card-img-top">
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                  <div class="btn-group">
+                                  </div>
+                                  <small class="text-body-secondary">9 mins</small>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col">
+                                <div class="card shadow-sm">
+                                        <img src="fotos/Snapinsta.app_449863911_1211429156875222_7423062993866809660_n_1080.jpg" class="card-img-top">
+                                  <div class="card-body">
+                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <div class="btn-group">
+                                      </div>
+                                      <small class="text-body-secondary">9 mins</small>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                                          <div class="col">
+                    <div class="card shadow-sm">
+                            <img src="fotos/Snapinsta.app_461694719_18245674264284312_1748034072748395654_n_1080.jpg" class="card-img-top">
+                      <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                          <div class="btn-group">
+                          </div>
+                          <small class="text-body-secondary">9 mins</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                        <div class="card shadow-sm">
+                                <img src="fotos/Snapinsta.app_462654168_7958946767543085_6757829526618213496_n_1080.jpg" class="card-img-top">
+                          <div class="card-body">
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                              <div class="btn-group">
+                              </div>
+                              <small class="text-body-secondary">9 mins</small>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                            <div class="card shadow-sm">
+                                    <img src="fotos/Snapinsta.app_462672662_1099783121807652_8996832937968988471_n_1080.jpg" class="card-img-top">
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                  <div class="btn-group">
+                                  </div>
+                                  <small class="text-body-secondary">9 mins</small>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col">
+                                <div class="card shadow-sm">
+                                        <img src="fotos/Snapinsta.app_462726396_905577861501435_7123065119665964647_n_1080.jpg" class="card-img-top">
+                                  <div class="card-body">
+                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                      <div class="btn-group">
+                                      </div>
+                                      <small class="text-body-secondary">9 mins</small>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
     </section>
