Arrumei uns erro no index.html de ortografia

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <section id="sobre" class="about-section">
     <h2>Sobre Mim</h2>
-    <p>Olá! a Vera Lúcia, uma artista especializada em esculturas e móveis em madeira, dedicada a fazer meus projetos.. Há mais de 15 anos, trabalho com diferentes tipos de madeira, explorando suas características naturais e texturas para criar peças que possam ser úteis para o dia a dia, como
+    <p>Olá! Sou Vera Lúcia, uma artista especializada em esculturas e móveis em madeira, dedicada a fazer meus projetos. Há mais de 15 anos, trabalho com diferentes tipos de madeira, explorando suas características naturais e texturas para criar peças que possam ser úteis para o dia a dia, como
         mesas, bancos e cadeiras.</p>
     
     <p>Minha jornada começou em uma pequena oficina no interior de Montenegro, onde aprendi as técnicas tradicionais. Desde então, desenvolvi meu próprio estilo, mesclando técnicas contemporâneas com o respeito pela tradição artesanal brasileira, trabalhando em uma chácara
