--- a/galeria.html
+++ b/galeria.html
@@ -16,9 +16,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#galeria">Galeria</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#contato">Contato</a></li>
+          <li><a class="link-opacity-10" href="galeria.html">Galeria</a></li>
+          <li><a class="link-opacity-10" href="index.html#sobre">Sobre</a></li>
+          <li><a class="link-opacity-10" href="index.html#contato">Contato</a></li>
         </ul>
     </nav>
     <section id="galeria" class="gallery">
@@ -27,11 +27,10 @@
                             <img src="fotos/Snapinsta.app_42354849_2188043254776083_2056967763187210005_n_1080.jpg" class="card-img-top">
                       
                       <div class="card-body">
-                        <p class="card-text">Mesa de madeira e </p>
+                        <p class="card-text">Mesa de madeira com duas cadeiras. Perfeira para tomar um vinho. </p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
                           </div>
-                          <small class="text-body-secondary">9 mins</small>
                         </div>
                       </div>
                     </div>
@@ -40,11 +39,10 @@
                         <div class="card shadow-sm">
                                 <img src="fotos/Snapinsta.app_449844746_1017471339901099_1641674724719939392_n_1080.jpg" class="card-img-top">
                           <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Dois suportes feitos de madeira para uso diário.</p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                               </div>
-                              <small class="text-body-secondary">9 mins</small>
                             </div>
                           </div>
                         </div>
@@ -53,11 +51,10 @@
                             <div class="card shadow-sm">
                                 <img src="fotos/Snapinsta.app_449854863_481969897714631_2861501438184957249_n_1080.jpg" class="card-img-top">
                               <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Mesa/Banco artesanal feito de madeira.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                   <div class="btn-group">
                                   </div>
-                                  <small class="text-body-secondary">9 mins</small>
                                 </div>
                               </div>
                             </div>
@@ -66,11 +63,10 @@
                                 <div class="card shadow-sm">
                                         <img src="fotos/Snapinsta.app_449863911_1211429156875222_7423062993866809660_n_1080.jpg" class="card-img-top">
                                   <div class="card-body">
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">Bandeja que pode ser usada para distribuição de bebidas, carnes e comida.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                       <div class="btn-group">
                                       </div>
-                                      <small class="text-body-secondary">9 mins</small>
                                     </div>
                                   </div>
                                 </div>
@@ -79,11 +75,10 @@
                     <div class="card shadow-sm">
                             <img src="fotos/Snapinsta.app_461694719_18245674264284312_1748034072748395654_n_1080.jpg" class="card-img-top">
                       <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Bandeja de madeira feita com tronco de árvore para uso rotineiro e churrasco, perfeita para colocar carne e farofa.</p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
                           </div>
-                          <small class="text-body-secondary">9 mins</small>
                         </div>
                       </div>
                     </div>
@@ -92,11 +87,10 @@
                         <div class="card shadow-sm">
                                 <img src="fotos/Snapinsta.app_462654168_7958946767543085_6757829526618213496_n_1080.jpg" class="card-img-top">
                           <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Bancos e mesa rústicos feitos de madeira.</p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                               </div>
-                              <small class="text-body-secondary">9 mins</small>
                             </div>
                           </div>
                         </div>
@@ -105,11 +99,10 @@
                             <div class="card shadow-sm">
                                     <img src="fotos/Snapinsta.app_462672662_1099783121807652_8996832937968988471_n_1080.jpg" class="card-img-top">
                               <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Mesinha artesanal cobrida com verniz. Muito confortável para gatos! </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                   <div class="btn-group">
                                   </div>
-                                  <small class="text-body-secondary">9 mins</small>
                                 </div>
                               </div>
                             </div>
@@ -118,11 +111,10 @@
                                 <div class="card shadow-sm">
                                         <img src="fotos/Snapinsta.app_462726396_905577861501435_7123065119665964647_n_1080.jpg" class="card-img-top">
                                   <div class="card-body">
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">Lâmpada artesanal feita com corda e galhos de árvore, em conjunto com a mesa logo abaixo.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                       <div class="btn-group">
                                       </div>
-                                      <small class="text-body-secondary">9 mins</small>
                                     </div>
                                   </div>
                                 </div>
